Fix Media Gallery buttons / detail panel contrast
This adds a shadow to the white arrow buttons to add contrast when there
is an image that is also white. This commit also adds a border-top to
the details panel so that there is a clear boundary between the white
panel and an image that is white.

Bug: T197106

--- a/resources/mobile.startup/Overlay.less
+++ b/resources/mobile.startup/Overlay.less
@@ -171,6 +171,8 @@
 			position: absolute;
 			top: 50%;
 			margin-top: -50%;
+			-webkit-filter: drop-shadow( 0 0 4px rgba( 0, 0, 0, 0.8 ) );
+			filter: drop-shadow( 0 0 4px rgba( 0, 0, 0, 0.8 ) );
 		}
 	}
 }
